application/nginx/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.11.0
        args:
        - "-nginx.scrape-uri=http://localhost/status"
        ports:
        - containerPort: 9113
          name: prometheus
        readinessProbe:
          httpGet:
            path: /metrics
            port: prometheus
        livenessProbe:
          httpGet:
            path: /metrics
            port: prometheus
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          name: config
      volumes:
      - name: config
        configMap:
          name: nginx-configmap
          items:
          - key: default.conf
            path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    scraped-by-prometheus: "true"
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: metrics
      protocol: TCP
      port: 9113
      targetPort: 9113
