application/nginx/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-server-virtual-service 
spec:
  hosts:
  - "nginx.chemimotty.com"
  gateways:
  - istio-system/my-gateway
  http:
  - route:
    - destination:
        host: nginx-service
        port:
          number: 80
